force-app/main/default/objects/Program_group__c/Program_group__c.object-meta.xml
<CustomObject>
    <label>Program group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>