force-app/main/default/objects/Program_group__c/fields/Number_Of_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Arrived__c</fullName>
    <inlineHelpText>סופר את כל המשתתפים ל
PROGRAM GROUP
שבסטטוס סיים, משתתף או פרש</inlineHelpText>
    <label>Number Of Arrived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>