force-app/main/default/objects/Program_group__c/fields/Number_of_Participations_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participations_Arrived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Participations Arrived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>