force-app/main/default/objects/Program_group__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>