force-app/main/default/objects/Program_group__c/fields/Total_of_Participations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Participations__c</fullName>
    <formula>Program__r.Total_of_Participations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Participations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>