force-app/main/default/objects/Program_group__c/validationRules/Date1.validationRule-meta.xml
<ValidationRule>
    <fullName>Date1</fullName>
    <active>true</active>
    <errorConditionFormula>End_date__c  &lt;  Start_date__c</errorConditionFormula>
    <errorMessage>End date cannot be earlier than start date.</errorMessage>
</ValidationRule>