force-app/main/default/objects/Program_group__c/validationRules/Date2.validationRule-meta.xml
<ValidationRule>
    <fullName>Date2</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Start_date__c  &lt;  Program__r.StartDate__c ,  Start_date__c  &gt;  Program__r.EndDate__c )</errorConditionFormula>
    <errorMessage>Start date is not in the program dates</errorMessage>
</ValidationRule>