force-app/main/default/objects/Program_group__c/validationRules/Date3.validationRule-meta.xml
<ValidationRule>
    <fullName>Date3</fullName>
    <active>true</active>
    <errorConditionFormula>OR(  End_date__c   &lt;  Program__r.StartDate__c , End_date__c &gt;  Program__r.EndDate__c )</errorConditionFormula>
    <errorMessage>End date is not in the program dates</errorMessage>
</ValidationRule>